# clock-sandbox

./: .gitignore  README.md  main.tex  pyproject.toml  requirements.txt
.binder/: postBuild  requirements.txt
.github/workflows/: ci.yml
ClockSandbox/LICENSES/: CC_BY_4.0.md  MIT_LICENSE.md
ClockSandbox/src/: .gitkeep
LICENSES/: CC_BY_4.0.md
docs/: api.md  concepts.md  decisions.md  phaseI_plus.md
examples/: adev_allantools_demo.py  basic_comparison.py  pairwise_vs_ideal.py  triangular_consensus.py
notebooks/: PhaseI_smoke_test.ipynb
src/: __init__.py  analysis.py  core.py
src/clocks/: __init__.py  flicker_like.py  ideal.py  noisy.py  random_walk.py
tests/: test_consensus.py  test_determinism.py
